--- a/twnews.html
+++ b/twnews.html
@@ -90,14 +90,47 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <h4 class="panel-title">
         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
          <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
-                2018/3/16-19 COSMOPROF WORLDWIDE BOLOGNA Hall 29A B2</h4>
+                2018/6/28 Hoschoc Cosmetics is ISO22716 & ISO9001 certified!</h4>
         </a>
       </h4>
     </div>
     <div id="collapseFour" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingFour">
       <div class="panel-body">
-          <img src="images/index_topbanner_6.jpg" class="img-responsive" alt="merry x'mas">
-          感謝您的蒞臨<br>期待我們的下次相見。
+          <img src="images/index_topbanner_10.jpg" class="img-responsive" alt="merry x'mas">
+          好思佳粧業通過BVC台灣衛理驗證－ISO 22716:2007 <br>
+
+好思佳粧業股份有限公司通過ISO 22716:2007驗證，並於今日(2018年6月28日)接受台灣衛理國際品保驗證股份有限公司(Bureau Veritas Certification, BVC)總經理李乾瑋親自授證。
+
+台灣衛理稽核團隊，依據ISO 22716:2007的要求，針對好思佳粧業的人員訓練、廠房規劃、儀器管理等，實施系統化的稽核，確認組織的管理系統運行紮實且有效，證明其化妝品工廠之生產、管制、儲存及運送皆已符合ISO國際標準化組織制定的化妝品GMP指導綱要。。
+
+近年來，好思佳粧業除了生產化妝品內料外，並跨足化妝品包材設計與生產業務，可提供國內外客戶整合性的專業化妝品生產服務。此外，為提供更佳的生產品質，近年亦持續投入資源於新廠房的建置、延攬專業人才，以期傳承35年優質的化妝品生產經驗。如今，好思佳粧業再於2018年通過ISO 22716:2007驗證，除了展現製造品質與國際標準接軌外，未來可望吸引更多國際客戶下單。
+
+<br>
+
+<新聞聯絡人>
+台灣衛理BVC 行銷部 
+Cathy Lin 02-25707655 #206
+<br>
+關於Bureau Veritas 必維國際檢驗集團
+必維國際檢驗集團(BV Group)成立於1828年，總部位於法國，旗下八大事業群提供品質、健康、安全、環境(QHSE)以及永續發展(SA)的符合性評估服務。
+BV驗證事業群在台灣的法人為台灣衛理國際品保驗證股份有限公司(Bureau Veritas Certification Taiwan Co., Ltd.)，提供ISO 9001、OHSAS 18001(ISO 45001)、ISO 14001、CSR永續報告書(ASR)、IATF 16949、ISO 14064-1、ISO 14067、PAS 2050、 ELV、VCS等各種驗證/確證/查證服務。
+<br>
+      </div>
+    </div>
+  </div>
+<div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+           <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2018/3/16-19 COSMOPROF WORLDWIDE BOLOGNA Hall 29A B2</h4>
+        </a>
+      </h4>
+    </div>
+    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+     <img src="images/index_topbanner_5.jpg" class="img-responsive" alt="merry x'mas">
+     感謝您的蒞臨<br>期待我們的下次相見。
       </div>
     </div>
   </div>
