--- a/news.html
+++ b/news.html
@@ -90,14 +90,34 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <h4 class="panel-title">
         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
          <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
-                2018/3/16-19 COSMOPROF WORLDWIDE BOLOGNA Hall 29A B2</h4>
+                2018/6/28 Hoschoc Enterprise Co., Ltd. Awarded ISO 22716</h4>
         </a>
       </h4>
     </div>
     <div id="collapseFour" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingFour">
       <div class="panel-body">
-          <img src="images/index_topbanner_6.jpg" class="img-responsive" alt="merry x'mas">
-           Thank you for coming.<br>We look forward to our next meeting.
+          <img src="images/index_topbanner_10.jpg" class="img-responsive" alt="iso22716 & iso 9001">
+          Hoschoc Enterprise Co., Ltd. has been awarded ISO 22716 by Bureau Veritas Certification (BVC). ISO 22716 - Cosmetics Good Manufacturing Practices are a set of hands-on advice, operational rules and organizational guidelines especially focused on human, technical and administrative factors affecting product quality. ISO 22716 is the standard describing the Cosmetics Good Manufacturing Practices. It has been written in collaboration with cosmetics industry professionals and promotes best-in-class methods. The scope of ISO 22716 is not only limited to production activities but also includes control, storage and expedition. 
+
+Hoschoc Enterprise has expanded from cosmetic formulation to the design and manufacture of packaging components to offer its customers a complete, integrated line of products and services. We are continually building and recruiting to maintain and improve the 35-year experience behind Hoschoc. With the addition of ISO 22716 under our belt, we anticipate more exposure of Hoschoc products in the international stage of cosmetics manufacturing! 
+
+ 
+      </div>
+    </div>
+  </div>
+ <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+           <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2018/3/16-19 COSMOPROF WORLDWIDE BOLOGNA Hall 29A B2</h4>
+        </a>
+      </h4>
+    </div>
+    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+     <img src="images/index_topbanner_5.jpg" class="img-responsive" alt="merry x'mas">
+      Thank you for coming.<br>We look forward to our next meeting.
       </div>
     </div>
   </div>
