--- a/twnews.html
+++ b/twnews.html
@@ -85,16 +85,71 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="aboutwordh1"><h1><strong>News</strong><br></h1>
             </div>   
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-     <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingFour">
+ <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingSeven">
       <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven">
+         <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2018/9/19 好思佳品質政策、社會責任政策、職業安全衛生政策</h4>
+        </a>
+      </h4>
+    </div>
+    <div id="collapseSeven" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingSeven">
+      <div class="panel-body">
+          品質政策<br>
+
+真誠、用心、專業<br>
+
+-----------------------------------------------------------------------
+社會責任政策<br>
+
+1.	承諾遵守SA8000之社會責任要求。<br>
+2.	承諾遵守勞動基準法、勞工安全衛生法及勞工相關法規。<br>
+3.	不招募未滿十六歲之童工。<br>
+4.	不得對員工有任何方式強迫和強制及抵押行為。<br>
+5.	關懷並確保員工之健康與安全。<br>
+6.	須確保員工結社自由與集體談判。<br>
+7.	不因性別、年齡、殘疾、種族、社會階層、國籍、省籍、宗教或政黨，有任何形式的歧視行為。<br>
+8.	不得對員工有精神或肉體威脅、虐待、性騷擾。<br>
+9.	持續改善社會責任管理系統，以符合利益相關方要求。<br>
+
+--------------------------------------------------------------------
+職業安全衛生政策<br>
+
+（一）	愛惜生命，關懷健康。<br>
+
+（二）	安全第一，防患未然。<br>
+
+
+      </div>
+    </div>
+  </div>
+<div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingFive">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseFive">
+           <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2018/3/16-19 COSMOPROF WORLDWIDE BOLOGNA Hall 29A B2</h4>
+        </a>
+      </h4>
+    </div>
+    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+      <div class="panel-body">
+     <img src="images/index_topbanner_5.jpg" class="img-responsive" alt="merry x'mas">
+     感謝您的蒞臨<br>期待我們的下次相見。
+      </div>
+    </div>
+  </div>
+     <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingSix">
+      <h4 class="panel-title">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
          <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/6/28 Hoschoc Cosmetics is ISO22716 & ISO9001 certified!</h4>
         </a>
       </h4>
     </div>
-    <div id="collapseFour" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingFour">
+    <div id="collapseSix" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingSix">
       <div class="panel-body">
           <img src="images/index_topbanner_10.jpg" class="img-responsive" alt="merry x'mas">
           好思佳粧業通過BVC台灣衛理驗證－ISO 22716:2007 <br>
@@ -119,15 +174,15 @@ BV驗證事業群在台灣的法人為台灣衛理國際品保驗證股份有限
     </div>
   </div>
 <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingOne">
+    <div class="panel-heading" role="tab" id="headingFive">
       <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseFive">
            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/3/16-19 COSMOPROF WORLDWIDE BOLOGNA Hall 29A B2</h4>
         </a>
       </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
       <div class="panel-body">
      <img src="images/index_topbanner_5.jpg" class="img-responsive" alt="merry x'mas">
      感謝您的蒞臨<br>期待我們的下次相見。
@@ -135,15 +190,15 @@ BV驗證事業群在台灣的法人為台灣衛理國際品保驗證股份有限
     </div>
   </div>
 <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingOne">
+    <div class="panel-heading" role="tab" id="headingFour">
       <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2017/12 Merry Christmas and Happy New Year! </h4>
         </a>
       </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
       <div class="panel-body">
      <img src="images/index_topbanner_5.jpg" class="img-responsive" alt="merry x'mas">
      助您佳節愉快!
@@ -151,9 +206,9 @@ BV驗證事業群在台灣的法人為台灣衛理國際品保驗證股份有限
     </div>
   </div>
  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingFour">
+    <div class="panel-heading" role="tab" id="headingThree">
       <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                2017/11/14-16 COSMOPACK 亞太區美容展 Hall 3-D23</h4>
         </a>
@@ -181,9 +236,9 @@ BV驗證事業群在台灣的法人為台灣衛理國際品保驗證股份有限
     </div>
   </div>
   <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingThree">
+    <div class="panel-heading" role="tab" id="headingOne">
       <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
             <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2017/3
            Welcome to Hoschoc!
@@ -191,7 +246,7 @@ BV驗證事業群在台灣的法人為台灣衛理國際品保驗證股份有限
         </a>
       </h4>
     </div>
-    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
       <div class="panel-body">
       </div>
     </div>
@@ -224,7 +279,7 @@ anchor.addEventListener('click', function (e) {
        <div>
         <dl class="col-xs-12 col-md-7 dl-horizontal indexfooterinfo ">
            <dt>E-mail</dt>
-            <dd><span itemprop="email">service@hoschoc.com</span></dd> 
+            <dd><span itemprop="email">taffy@hoschoc.com</span></dd> 
            <dt>TEL</dt>
             <dd><span itmeprop="tel">886-6-2633066</span></dd> 
            <dt>Address</dt>
