--- a/container_lip.html
+++ b/container_lip.html
@@ -171,7 +171,7 @@ anchor.addEventListener('click', function (e) {
        <div>
         <dl class="col-xs-12 col-md-7 dl-horizontal indexfooterinfo ">
            <dt>E-mail</dt>
-            <dd><span itemprop="email">service@hoschoc.com</span></dd> 
+            <dd><span itemprop="email">taffy@hoschoc.com</span></dd> 
            <dt>TEL</dt>
             <dd><span itmeprop="tel">886-6-2633066</span></dd> 
            <dt>Address</dt>
