--- a/index.html
+++ b/index.html
@@ -88,17 +88,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="images/index_topbanner_10.jpg" alt="iso 22716 & iso 9001">
+      <img src="images/index_topbanner_11.jpg" alt="2018 COSMOPACK ASIA 3-D23" class="indeximage">
+      <div class="carousel-caption">
+      </div>
+      </div>
+    <div class="item">
+      <img src="images/index_topbanner_10.jpg" alt="iso 22716 & iso 9001" class="indeximage">
       <div class="carousel-caption">
       </div>
       </div>
      <div class="item">
-      <img src="images/index_topbanner_8.jpg" alt="Hoschoc beautyworld middle east sa-b18" class="indeximage" class="indeximage">
+      <img src="images/index_topbanner_8.jpg" alt="Hoschoc beautyworld middle east sa-b18" class="indeximage">
       <div class="carousel-caption">
       </div>
     </div>
       <div class="item">
-      <img src="images/index_topbanner_3.jpg" alt="Hoschoc formula"  class="indeximage">
+      <img src="images/index_topbanner_12.jpg" alt="Hoschoc formula"  class="indeximage">
       <div class="carousel-caption">
       </div>
     </div>
@@ -182,11 +187,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3><strong>NEWS</strong></h3>
             
         </div>
+               <div class="col-xs-12 col-md-4 indexnews">
+            <a href="news.html" style="text-decoration:none; color:black;"> 
+            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2018/11/13-15</h4>
+            <h5>COSMOPACK ASIA in AsiaWorld-Expo<br>
+                3-D23</h5>
+            </a></div>
               <div class="col-xs-12 col-md-4 indexnews">
             <a href="news.html" style="text-decoration:none; color:black;">
                <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/7/2</h4>
-            <h5>Our factory is ISO22716 & ISO9001 certified!<br>
+            <h5>Our factory is ISO22716 & ISO9001 certified!<br><br>
              </h5>
             </a></div>
              <div class="col-xs-12 col-md-4 indexnews">
@@ -196,13 +208,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h5>beautyworld MIDDLE EAST<br>
                 SA-B18</h5>
             </a></div>
-           <div class="col-xs-12 col-md-4 indexnews">
-            <a href="news.html" style="text-decoration:none; color:black;"> 
-            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
-                2018/3/16-19</h4>
-            <h5>COSMOPROF WORLDWIDE BOLOGNA<br>
-                Hall 29A Booth B2</h5>
-            </a></div>
+          
     </div></div>
 
 <div class="container">
