--- a/twindex.html
+++ b/twindex.html
@@ -86,8 +86,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
-      <div class="item active">
-      <img src="images/index_topbanner_10.jpg" alt="好思佳已通過ISO 22716 &ISO 9001專業認證">
+     <div class="item active">
+      <img src="images/index_topbanner_11.jpg" alt="cosmopack 3-d23 hoschoc" class="indeximage">
+      <div class="carousel-caption">
+      </div>
+      </div>
+      <div class="item">
+      <img src="images/index_topbanner_10.jpg" alt="好思佳已通過ISO 22716 &ISO 9001專業認證" class="indeximage">
       <div class="carousel-caption">
       </div>
       </div>
@@ -97,7 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       </div>
     <div class="item">
-      <img src="images/index_topbanner_7.jpg" alt="Hoschoc Formula"  class="indeximage">
+      <img src="images/index_topbanner_12.jpg" alt="Hoschoc Formula"  class="indeximage">
       <div class="carousel-caption">
       </div>
     </div>
@@ -181,10 +186,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3><strong>最新消息</strong></h3>
         </div>
            <div class="col-xs-12 col-md-4 indexnews">
+            <a href="news.html" style="text-decoration:none; color:black;"> 
+            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2018/11/13-15</h4>
+            <h5>COSMOPACK ASIA in AsiaWorld-Expo<br>
+                3-D23</h5>
+            </a></div>
+           <div class="col-xs-12 col-md-4 indexnews">
             <a href="twnews.html" style="text-decoration:none; color:black;">
                <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/7/2</h4>
-            <h5>好思佳已通過ISO22716 & ISO9001專業認證!<br>
+            <h5>好思佳已通過ISO22716 & ISO9001專業認證!<br><br>
              </h5>
             </a></div>
              <div class="col-xs-12 col-md-4 indexnews">
@@ -193,13 +205,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 2018/5/8-10</h4>
             <h5>beautyworld MIDDLE EAST<br>
                 SA-B18</h5>
-            </a></div>
-           <div class="col-xs-12 col-md-4 indexnews">
-            <a href="twnews.html" style="text-decoration:none; color:black;"> 
-            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
-                2018/3/16-19</h4>
-            <h5>COSMOPROF WORLDWIDE BOLOGNA<br>
-                Hall 29A Booth B2</h5>
             </a></div>
     </div></div>
 
