--- a/news.html
+++ b/news.html
@@ -85,16 +85,32 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="aboutwordh1"><h1><strong>News</strong><br></h1>
             </div>   
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-     <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingFour">
+       <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingEight">
       <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
+         <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2018/11/13-15 COSMOPACK ASIA in AsiaWorld-Expo 3-D23</h4>
+        </a>
+      </h4>
+    </div>
+    <div id="collapseEight" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingEight">
+      <div class="panel-body">
+          <img src="images/index_topbanner_11.jpg" class="img-responsive" alt="3-D23">
+          Come and meet us!
+      </div>
+    </div>
+  </div>
+     <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingSix">
+      <h4 class="panel-title">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
          <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/6/28 Hoschoc Enterprise Co., Ltd. Awarded ISO 22716</h4>
         </a>
       </h4>
     </div>
-    <div id="collapseFour" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingFour">
+    <div id="collapseSix" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingSix">
       <div class="panel-body">
           <img src="images/index_topbanner_10.jpg" class="img-responsive" alt="iso22716 & iso 9001">
           Hoschoc Enterprise Co., Ltd. has been awarded ISO 22716 by Bureau Veritas Certification (BVC). ISO 22716 - Cosmetics Good Manufacturing Practices are a set of hands-on advice, operational rules and organizational guidelines especially focused on human, technical and administrative factors affecting product quality. ISO 22716 is the standard describing the Cosmetics Good Manufacturing Practices. It has been written in collaboration with cosmetics industry professionals and promotes best-in-class methods. The scope of ISO 22716 is not only limited to production activities but also includes control, storage and expedition. 
@@ -106,31 +122,30 @@ Hoschoc Enterprise has expanded from cosmetic formulation to the design and manu
     </div>
   </div>
  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingOne">
+    <div class="panel-heading" role="tab" id="headingFive">
       <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/3/16-19 COSMOPROF WORLDWIDE BOLOGNA Hall 29A B2</h4>
         </a>
       </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
       <div class="panel-body">
-     <img src="images/index_topbanner_5.jpg" class="img-responsive" alt="merry x'mas">
       Thank you for coming.<br>We look forward to our next meeting.
       </div>
     </div>
   </div>
 <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingOne">
+    <div class="panel-heading" role="tab" id="headingFour">
       <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2017/12 Merry Christmas and Happy New Year! </h4>
         </a>
       </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
       <div class="panel-body">
      <img src="images/index_topbanner_5.jpg" class="img-responsive" alt="merry x'mas">
       May the season's joy fill you all the year round.
@@ -138,15 +153,15 @@ Hoschoc Enterprise has expanded from cosmetic formulation to the design and manu
     </div>
   </div>
   <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingOne">
+    <div class="panel-heading" role="tab" id="headingThree">
       <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2017/11/14-16 COSMOPACK ASIA HONG KONG Hall 3-D23</h4>
         </a>
       </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
       <div class="panel-body">
         Thank you for coming.<br>We look forward to our next meeting.
       </div>
@@ -168,9 +183,9 @@ Hoschoc Enterprise has expanded from cosmetic formulation to the design and manu
     </div>
   </div>
   <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingThree">
+    <div class="panel-heading" role="tab" id="headingOne">
       <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
             <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2017/3
            Welcome to Hoschoc!
@@ -178,7 +193,7 @@ Hoschoc Enterprise has expanded from cosmetic formulation to the design and manu
         </a>
       </h4>
     </div>
-    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
       <div class="panel-body">
       </div>
     </div>
