--- a/twnews.html
+++ b/twnews.html
@@ -85,10 +85,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="aboutwordh1"><h1><strong>News</strong><br></h1>
             </div>   
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+   <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingEight">
+      <h4 class="panel-title">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
+         <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2018/11/13-15 COSMOPACK ASIA in AsiaWorld-Expo 3-D23</h4>
+        </a>
+      </h4>
+    </div>
+     <div id="collapseEight" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingEight">
+      <div class="panel-body">
+          <img src="images/index_topbanner_11.jpg" class="img-responsive" alt="3-D23">
+          Come and meet us!
+      </div>
+    </div>
+  </div>
  <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingSeven">
       <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
          <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/9/19 好思佳品質政策、社會責任政策、職業安全衛生政策</h4>
         </a>
@@ -100,7 +116,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 真誠、用心、專業<br>
 
------------------------------------------------------------------------
+-----------------------------------------------------------------------<br>
 社會責任政策<br>
 
 1.	承諾遵守SA8000之社會責任要求。<br>
@@ -113,7 +129,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 8.	不得對員工有精神或肉體威脅、虐待、性騷擾。<br>
 9.	持續改善社會責任管理系統，以符合利益相關方要求。<br>
 
---------------------------------------------------------------------
+--------------------------------------------------------------------<br>
 職業安全衛生政策<br>
 
 （一）	愛惜生命，關懷健康。<br>
@@ -121,22 +137,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 （二）	安全第一，防患未然。<br>
 
 
-      </div>
-    </div>
-  </div>
-<div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingFive">
-      <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseFive">
-           <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
-                2018/3/16-19 COSMOPROF WORLDWIDE BOLOGNA Hall 29A B2</h4>
-        </a>
-      </h4>
-    </div>
-    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
-      <div class="panel-body">
-     <img src="images/index_topbanner_5.jpg" class="img-responsive" alt="merry x'mas">
-     感謝您的蒞臨<br>期待我們的下次相見。
       </div>
     </div>
   </div>
@@ -151,7 +151,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
     <div id="collapseSix" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingSix">
       <div class="panel-body">
-          <img src="images/index_topbanner_10.jpg" class="img-responsive" alt="merry x'mas">
+          <img src="images/index_topbanner_10.jpg" class="img-responsive" alt="Hoschoc Cosmetics is ISO22716 & ISO9001 certified">
           好思佳粧業通過BVC台灣衛理驗證－ISO 22716:2007 <br>
 
 好思佳粧業股份有限公司通過ISO 22716:2007驗證，並於今日(2018年6月28日)接受台灣衛理國際品保驗證股份有限公司(Bureau Veritas Certification, BVC)總經理李乾瑋親自授證。
@@ -184,7 +184,6 @@ BV驗證事業群在台灣的法人為台灣衛理國際品保驗證股份有限
     </div>
     <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
       <div class="panel-body">
-     <img src="images/index_topbanner_5.jpg" class="img-responsive" alt="merry x'mas">
      感謝您的蒞臨<br>期待我們的下次相見。
       </div>
     </div>
