--- a/news.html
+++ b/news.html
@@ -88,13 +88,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
        <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingEight">
       <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
          <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/11/13-15 COSMOPACK ASIA in AsiaWorld-Expo 3-D23</h4>
         </a>
       </h4>
     </div>
-    <div id="collapseEight" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingEight">
+    <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
       <div class="panel-body">
           <img src="images/index_topbanner_11.jpg" class="img-responsive" alt="3-D23">
           Come and meet us!
@@ -104,13 +104,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingSix">
       <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
          <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/6/28 Hoschoc Enterprise Co., Ltd. Awarded ISO 22716</h4>
         </a>
       </h4>
     </div>
-    <div id="collapseSix" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingSix">
+    <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
       <div class="panel-body">
           <img src="images/index_topbanner_10.jpg" class="img-responsive" alt="iso22716 & iso 9001">
           Hoschoc Enterprise Co., Ltd. has been awarded ISO 22716 by Bureau Veritas Certification (BVC). ISO 22716 - Cosmetics Good Manufacturing Practices are a set of hands-on advice, operational rules and organizational guidelines especially focused on human, technical and administrative factors affecting product quality. ISO 22716 is the standard describing the Cosmetics Good Manufacturing Practices. It has been written in collaboration with cosmetics industry professionals and promotes best-in-class methods. The scope of ISO 22716 is not only limited to production activities but also includes control, storage and expedition. 
