--- a/twnews.html
+++ b/twnews.html
@@ -88,13 +88,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingEight">
       <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
+        <a class="collapsed"  role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
          <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/11/13-15 COSMOPACK ASIA in AsiaWorld-Expo 3-D23</h4>
         </a>
       </h4>
     </div>
-     <div id="collapseEight" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingEight">
+     <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
       <div class="panel-body">
           <img src="images/index_topbanner_11.jpg" class="img-responsive" alt="3-D23">
           Come and meet us!
@@ -104,13 +104,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingSeven">
       <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+        <a class="collapsed"  role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
          <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/9/19 好思佳品質政策、社會責任政策、職業安全衛生政策</h4>
         </a>
       </h4>
     </div>
-    <div id="collapseSeven" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingSeven">
+    <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
       <div class="panel-body">
           品質政策<br>
 
@@ -143,13 +143,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingSix">
       <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
          <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/6/28 Hoschoc Cosmetics is ISO22716 & ISO9001 certified!</h4>
         </a>
       </h4>
     </div>
-    <div id="collapseSix" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingSix">
+    <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
       <div class="panel-body">
           <img src="images/index_topbanner_10.jpg" class="img-responsive" alt="Hoschoc Cosmetics is ISO22716 & ISO9001 certified">
           好思佳粧業通過BVC台灣衛理驗證－ISO 22716:2007 <br>
