--- a/index.html
+++ b/index.html
@@ -125,13 +125,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-xs-12 indexin">
             <article class="hidden-xs col-md-7 indexinin">
                 <h1>Hoschoc Cosmetics</h1>
-                <h4 style="line-height: 24px">Hoschoc is a brand-new cosmetics manufacturing company.<br> We are experienced in supplying a wide range of cosmetic products at different levels and prices that satisfies every expectation of you.<br><br>
+                <h4 style="line-height: 24px">We are experienced in supplying a wide range of cosmetic products at different levels and prices that satisfies every expectation of you.<br>
+                Our factory is ISO22716 & ISO9001 certified in 2018.
+                    <br>
+                    <img src="images/indexdescriptionISO.png" class="img-responsive"
+                 alt="hoschoc iso 22716 & 9001">
+                    <br>
                     <a href="about_us.html" style="color:white;" ><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>more...</a></h4>
         
             </article>
              <article class="visible-xs col-xs-12 indexininxs">
                 <h1>Hoschoc Cosmetics</h1>
-                <h4 style="line-height: 24px">Hoschoc is a brand-new cosmetics manufacturing company.<br> We are experienced in supplying a wide range of cosmetic products at different levels and prices that satisfies every expectation of you.<br><br>
+                <h4 style="line-height: 24px">We are experienced in supplying a wide range of cosmetic products at different levels and prices that satisfies every expectation of you.<br>
+                Our factory is ISO22716 & ISO9001 certified in 2018.<br>
+                    <img src="images/indexdescriptionISO.png" class="img-responsive"
+                 alt="hoschoc iso 22716 & 9001">
+                    <br>
                 <a href="about_us.html" style="color:white;" ><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>more...</a>
                  </h4>
                 
