--- a/twindex.html
+++ b/twindex.html
@@ -124,13 +124,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-xs-12 indexin">
             <div class="hidden-xs col-md-7 twindexinin">
                 <h1>好思佳粧業</h1>
-                <h4 style="line-height: 24px">好思佳為一家臺灣化妝品美妝工廠，豐富的商品系列，<br>滿足客戶所期望的，我們竭盡所能的提供您各種彩妝與化妝品需求。<br><br>
+                <h4 style="line-height: 24px">好思佳為臺灣化妝品美妝工廠，豐富的商品系列，<br>滿足客戶所期望的，我們竭盡所能的提供您各種彩妝與化妝品需求。<br>
+                    好思佳已於2018通過ISO22716與ISO9001認證。
+                    <br>
+                    <img src="images/indexdescriptionISO.png" class="img-responsive"
+                 alt="hoschoc iso 22716 & 9001">
+                    <br>
                     <a href="twabout_us.html" style="color:white;" ><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>了解更多...</a></h4>
         
             </div>
              <div class="visible-xs col-xs-12 twindexininxs">
                 <h1>好思佳粧業</h1>
-                <h4 style="line-height:24px">好思佳為一家臺灣化妝品美妝工廠，豐富的商品系列，<br>滿足客戶所期望的，我們竭盡所能的提供您各種彩妝與化妝品需求。<br><br>
+                <h4 style="line-height:24px">好思佳為臺灣化妝品美妝工廠，豐富的商品系列，<br>滿足客戶所期望的，我們竭盡所能的提供您各種彩妝與化妝品需求。<br>
+                    好思佳已於2018通過ISO22716與ISO9001認證。
+                    <br>
+                     <img src="images/indexdescriptionISO.png" class="img-responsive"
+                 alt="hoschoc iso 22716 & 9001">
+                    <br>
                 <a href="twabout_us.html" style="color:white;" ><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>了解更多...</a>
                  </h4>
                 
