--- a/formula_CHEEKS.html
+++ b/formula_CHEEKS.html
@@ -101,69 +101,77 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li role="presentation" ><a href="formula_Contour.html"><h4>Contour</h4></a></li>
 </ul> 
     
-    <div class="row">
+ <div class="row">
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-04_face_BS-01.jpg" alt="Blusher Stick">
+      <img src="images/formula/20_Cream%20Blusher-01.jpg" alt="Cream Blusher">
+            <div class="caption">
+        <h3 class="FOh3">Cream Blusher<br></h3>
+        <p>Ceamy formula. Translucent radiance. The highest-intensity hues.<br> </p>
+            </div>
+    </div>
+        </div>
+    <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/21_Powder%20Blusher-01.jpg" alt="Powder Blusher">
+            <div class="caption">
+        <h3 class="FOh3">Powder Blusher<br></h3>
+        <p>High pigments that give you a matte blush. Handy puff packaging component allows you to touch up on the go. Paraben free.<br> </p>
+            </div>
+    </div>
+        </div>
+    <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/22_Blusher%20Stick-01.jpg" alt="Blusher Stick">
             <div class="caption">
         <h3 class="FOh3">Blusher Stick<br></h3>
-        <p>● Argireline & Hyaluronic acid that care for your skin.<br> </p>
-            </div>
-    </div>
-        </div>
-    <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/2-09_face_BlushP-01.jpg" alt="Blush Puff">
-            <div class="caption">
-        <h3 class="FOh3">Blush Puff<br></h3>
-        <p>● Delicate blush powders in a puff pot. Perfect for touch-ups on the go!<br> </p>
-            </div>
-    </div>
-        </div>
-    <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/2-10_face_MB-01.jpg" alt="Mousse Blusher">
-            <div class="caption">
-        <h3 class="FOh3">Mousse Blusher<br></h3>
-        <p>● Water in Oil technology. Light weight, silky, breathable, and waterproof.<br> </p>
+        <p>Argireline & Hyaluronic acid that care for your skin.<br><br> </p>
             </div>
     </div>
         </div>
      <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/5-12_series_CB-01.jpg" alt="Cushion Blusher">
+      <img src="images/formula/23_Lip%20&%20Cheek%20Tint-01.jpg" alt="Lip & Cheek Tint">
             <div class="caption">
-        <h3 class="FOh3">Cushion Blusher<br></h3>
-        <p>● A natural blush that is light and breathable with herbal essences.<br> </p>
+        <h3 class="FOh3">Lip & Cheek Tint<br></h3>
+        <p>Watery & long-lasting. Alcohol Free, Oil Free and Paraben free.<br> </p>
             </div>
     </div>
-        </div>
-<!--old-->     
+        </div>    
            <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_blush_3-01.jpg" alt="Creamy Blusher">
+      <img src="images/formula/26_Mousse%20Blusher-01.jpg" alt="Mousse Blusher">
             <div class="caption">
-        <h3 class="FOh3">Creamy Blusher<br></h3>
-        <p>● Developed to overcome the unenduring problem of powder blusher. It melts onto skin and the result is a natural blush that lasts all day long!<br><br><br></p>
+        <h3 class="FOh3">Mousse Blusher<br></h3>
+        <p>Water in Oil technology. Light weight, silky, breathable, and waterproof.></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_blush_4-01.jpg" alt="Liquid Blusher">
+      <img src="images/formula/27_Cushion%20Blusher-01.jpg" alt="Cushion Blusher">
             <div class="caption">
-        <h3 class="FOh3">Liquid Blusher<br></h3>
-        <p>● Can be used on cheeks as well as lips, it shines a crystal light like a jewel and is lightweight and waterproof.  <br>
-        <br><br><br><br></p>
+        <h3 class="FOh3">Cushion Blusher<br></h3>
+        <p>Long wearing and non sticky texture gives you a healthy and natural blush. Paraben free.<br></p>
             </div>
     </div>
         </div>
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_blush_1-01.jpg" alt="Pattern Pressed Powder">
+      <img src="images/formula/28_Baked%20Blusher-01.jpg" alt="Baked Blusher">
             <div class="caption">
-        <h3 class="FOh3">Pattern Pressed Powder<br></h3>
-        <p>● The unique designs make makeup lots of fun the result is a joy to see.  <br>
+        <h3 class="FOh3">Baked Blusher<br></h3>
+        <p>High proportion of pearl powder. Brings a metal-like luxury makeup<br>
+         <br></p>
+            </div>
+    </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/25_Patterned%20Blusher-01.jpg" alt="Patterned Blusher">
+            <div class="caption">
+        <h3 class="FOh3">Patterned Blusher<br></h3>
+        <p>Complements your skin's tone and texture<br>
          <br></p>
             </div>
     </div>
